--- a/mle.html
+++ b/mle.html
@@ -194,8 +194,8 @@ proc export data=mle.b outfile=&quot;c:\temp\hividu15dec15.csv&quot; dbms=csv re
 ## Data Set Name        MLE.B                         Observations          1164
 ## Member Type          DATA                          Variables             9   
 ## Engine               V9                            Indexes               0   
-## Created              02/11/2016 16:22:02           Observation Length    72  
-## Last Modified        02/11/2016 16:22:02           Deleted Observations  0   
+## Created              02/14/2016 14:11:20           Observation Length    72  
+## Last Modified        02/14/2016 14:11:20           Deleted Observations  0   
 ## Protection                                         Compressed            NO  
 ## Data Set Type                                      Sorted                NO  
 ## Label                                                                        
@@ -1286,6 +1286,10 @@ o.logit = optim(start.beta, LL.logistic.reg.pml,
                    hessian=TRUE) # see http://stats.stackexchange.com/questions/81000/calculate-coefficients-in-a-logistic-regression-with-r
 o.logit$par</code></pre>
 <pre><code>## [1] -0.01231835  0.00532673</code></pre>
+<div class="references">
+<h2>Assigned reading</h2>
+<p>1. Cole SR, Chu H, Greenland S. Maximum Likelihood, Profile Likelihood, and Penalized Likelihood: A Primer. <em>Am. J. Epidemiol.</em> [electronic article]. 2014;179(2):252–260. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245</a>)</p>
+</div>
 </div>
 </div>
 </div>
